out
test.cpp:3:1: error: expected initializer before ‘int’
    3 | int main() {
      | ^~~
xint.cpp:3:1: error: expected initializer before ‘Xint’
    3 | Xint &Xint::inc_pos() {
      | ^~~~
xint.cpp: In member function ‘std::pair<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> > Xint::divide(Xint&)’:
xint.cpp:438:1: warning: no return statement in function returning non-void [-Wreturn-type]
  438 | };
      | ^
xint.cpp: In function ‘Xint& operator/=(Xint&, Xint&)’:
xint.cpp:451:1: warning: no return statement in function returning non-void [-Wreturn-type]
  451 | }
      | ^
make: *** [Makefile:8: xint] Błąd 1
